totally contrast fixes

--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -6,7 +6,7 @@
   --purple: linear-gradient(180deg, #bb67ff 0%, #c484f3 100%);
   --pink: #282626;
   --glass: rgba(255, 255, 255, 0.54);
-  --boxShadow: 0px 19px 60px rgb(0 0 0 / 8%);
+  --boxShadow: 0px 19px 60px rgb(0, 0, 0);
   --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
   --activeItem: #c0051754;
 }
@@ -15,7 +15,7 @@
   color: var(--black);
   background: linear-gradient(
     106.37deg,
-    #d3d1d1 29.63%,
+    #2f2e2e 29.63%,
     #d2d1d1 51.55%,
     #c3c2c2 90.85%
   );
